adicionei um parágrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -9,5 +9,7 @@
     <h1>Olá, Mundo!</h1>
     <hr>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Natus eos ratione assumenda! Quaerat, saepe corrupti. Natus dolorem quidem aspernatur, iure odio cupiditate ipsam harum ipsa, veniam pariatur quae assumenda minus.</p>
+    <hr>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis voluptates amet perspiciatis nemo harum deleniti voluptas hic iusto velit asperiores reprehenderit eum rem, similique placeat, voluptate qui ex dolorum? Culpa.</p>
 </body>
 </html>
